Added Q150 and modified Q155